# four_wheel_robot_sim

./: .gitignore  README.md  frames.gv  robot_rviz2.rviz
src/: README.md
src/four_wheel_robot_bringup/: CMakeLists.txt  package.xml
src/four_wheel_robot_description/: CMakeLists.txt  package.xml
src/four_wheel_robot_description/config/: lidar_view.perspective  stereo_view.perspective
src/four_wheel_robot_description/launch/: display.launch.py  visualization.launch.py
src/four_wheel_robot_description/rviz/: lidar_config.rviz  point_cloud.rviz  robot_visualization.rviz  urdf_config.rviz
src/four_wheel_robot_description/urdf/: robot.urdf.xacro  robot_core.xacro  sensors.xacro
src/four_wheel_robot_gazebo/: CMakeLists.txt  package.xml
src/four_wheel_robot_gazebo/launch/: gazebo.launch.py
src/four_wheel_robot_gazebo/scripts/: teleop_keyboard.py
src/four_wheel_robot_gazebo/worlds/: test_world.world
src/four_wheel_robot_nav/: CMakeLists.txt  package.xml
src/four_wheel_robot_nav/behavior_trees/: navigate_w_replanning_and_recovery.xml
src/four_wheel_robot_nav/config/: cyclonedds.xml  nav2_params.yaml  slam_params.yaml
src/four_wheel_robot_nav/launch/: navigation.launch.py
src/four_wheel_robot_nav/maps/: map.yaml
src/four_wheel_robot_nav/rviz/: nav.rviz
src/four_wheel_robot_nav/worlds/: empty.world
src/four_wheel_robot_navigation/: CMakeLists.txt  package.xml
src/four_wheel_robot_navigation/config/: nav2_params.yaml  slam_params.yaml
src/four_wheel_robot_navigation/launch/: navigation.launch.py
src/four_wheel_robot_navigation/rviz/: nav2_config.rviz
